# chatserver

./: CMakeLists.txt  README.md  nginx基于tcp负载均衡配置.md
include/: public.h
include/server/: chatserver.h  friendmodel.h  group.hpp  groupmodel.h  groupuser.hpp  offlinemodel.h  service.h  user.hpp  usermodel.h
include/server/database/: database.h
src/server/: CMakeLists.txt  chatserver.cpp  friendmodel.cpp  groupmodel.cpp  main.cpp  offlinemodel.cpp  service.cpp  usermodel.cpp
src/server/database/: database.cpp
src/server/redis/: redis.cpp
